src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>A_R_Team_Notes__c</fullName>
        <description>Notes from the Accounts Receivable team</description>
        <inlineHelpText>Notes from the Accounts Receivable team</inlineHelpText>
        <label>A/R Team Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Number_Index__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Account Number Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Accounting_ID__c</fullName>
        <description>Reference Number For Accounting System</description>
        <displayFormat>ACCT-{00000000}</displayFormat>
        <inlineHelpText>Reference Number For Accounting System</inlineHelpText>
        <label>Accounting ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Billing_Email_Address__c</fullName>
        <description>Email Address For Billing Inquiries</description>
        <inlineHelpText>Email Address For Billing Inquiries</inlineHelpText>
        <label>Billing Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Development_Status__c</fullName>
        <description>Status of Business Development Account</description>
        <inlineHelpText>Status of Business Development Account</inlineHelpText>
        <label>Business Development Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not a Business Development Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Contacted/Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead – Meeting Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead – Meeting Complete – Sales Process in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Established</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPF_Customer_Id__c</fullName>
        <label>CPF Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Last_Name__c</fullName>
        <formula>IF(CONTAINS(Name, &quot;,&quot;),LEFT(Name,FIND(&quot;,&quot;,Name)-1),Name)</formula>
        <label>Client Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Program_Start_Date__c</fullName>
        <label>Community Program Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Community_Program__c</fullName>
        <label>Community Program</label>
        <picklist>
            <picklistValues>
                <fullName>Concord Solar Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Bridgeport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Frederick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Newtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pikesville Solar Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Glastonbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Stamford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Cheshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Needham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Lexington-Bedford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Andover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellesley Power to Choose Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize SOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Torrington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Westport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Windham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairfield Energy Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPN College Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Tompkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Avon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Solarize Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Energy Solar Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Tier Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Huntington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Plainfield Ashfield Buckland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize RetroFit Baltimore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUNY/Pepsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloucester Solar Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belmont Goes Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Report_Log_Count__c</fullName>
        <description>Number of Credit Report Logs on this Account</description>
        <inlineHelpText>Number of Credit Report Logs on this Account</inlineHelpText>
        <label>Credit Report Log Count</label>
        <summaryForeignKey>Credit_Report_Log__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Activity_Overall__c</fullName>
        <description>Formula showing the Date of Most Recent Activity or Date of Most Recent Activity on Contacts or Date of Most Recent Activity on Opportunities that is closest to today</description>
        <formula>IF( ISBLANK(Date_of_Most_Recent_Activity__c) &amp;&amp; ISBLANK(Date_of_Most_Recent_Activity_on_Contacts__c) &amp;&amp; ISBLANK(Date_of_Most_Recent_Activity_on_Opportun__c),
   NULL,

/*ELSE*/
   TODAY() -
      MIN(
         BLANKVALUE(TODAY() - Date_of_Most_Recent_Activity__c,365242199), /* 1-million years is placeholder if date is blank so that MIN function... */
         BLANKVALUE(TODAY() - Date_of_Most_Recent_Activity_on_Contacts__c,365242199), /* ... can still calculate the minimum of the populated date fields */
         BLANKVALUE(TODAY() - Date_of_Most_Recent_Activity_on_Opportun__c,365242199)
      )
)</formula>
        <inlineHelpText>Formula showing the Date of Most Recent Activity or Date of Most Recent Activity on Contacts or Date of Most Recent Activity on Opportunities that is closest to today</inlineHelpText>
        <label>Date of Most Recent Activity Overall</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Activity__c</fullName>
        <description>Formula showing the Date of Most Recent Event or Date of Most Recent Task that is closest to today</description>
        <formula>IF( ISBLANK(Date_of_Most_Recent_Event__c) &amp;&amp; ISBLANK(Date_of_Most_Recent_Task__c),
   NULL,

/*ELSE*/
   TODAY() -
      MIN(
         BLANKVALUE(TODAY() - Date_of_Most_Recent_Event__c,365242199), /* 1-million years is placeholder if date is blank so that MIN function... */
         BLANKVALUE(TODAY() - Date_of_Most_Recent_Task__c,365242199) /* ... can still calculate the minimum of the populated date fields */
      )
)</formula>
        <inlineHelpText>Formula showing the Date of Most Recent Event or Date of Most Recent Task that is closest to today</inlineHelpText>
        <label>Date of Most Recent Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Activity_on_Contacts__c</fullName>
        <description>Rollup showing the Max date (before today) of activity records related to child contacts that are related to this record. This field is populated by the &quot;Acc Date of Most Recent Activity on Contacts&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Max date (before today) of activity records related to child contacts that are related to this record</inlineHelpText>
        <label>Date of Most Recent Activity on Contacts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Activity_on_Opportun__c</fullName>
        <description>Rollup showing the Max date (before today) of activity records related to child opportunities that are related to this record. This field is populated by the &quot;Acc Date of Most Recent Activity on Opportunities&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Max date (before today) of activity records related to child opportunities that are related to this record</inlineHelpText>
        <label>Date of Most Recent Activity on Opportun</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Event__c</fullName>
        <description>Rollup showing the Max date (before today) of event records related to this record. This field is populated by the &quot;Acc Date of Most Recent Event&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Max date (before today) of event records related to this record</inlineHelpText>
        <label>Date of Most Recent Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Task__c</fullName>
        <description>Rollup showing the Max date (before today) of task records related to this record. This field is populated by the &quot;Acc Date of Most Recent Task&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Max date (before today) of task records related to this record</inlineHelpText>
        <label>Date of Most Recent Task</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Activity_Overall__c</fullName>
        <description>Formula showing the Date of Next Activity or Date of Next Activity on Contacts or Date of Next Activity on Opportunities that is closest to today</description>
        <formula>IF( ISBLANK(Date_of_Next_Activity__c) &amp;&amp; ISBLANK(Date_of_Next_Activity_on_Contacts__c) &amp;&amp; ISBLANK(Date_of_Next_Activity_on_Opportunities__c),
   NULL,

/*ELSE*/
   TODAY() +
      MIN(
         BLANKVALUE(Date_of_Next_Activity__c - TODAY(),365242199), /* 1-million years is placeholder if date is blank so that MIN function... */
         BLANKVALUE(Date_of_Next_Activity_on_Contacts__c - TODAY(),365242199), /* ... can still calculate the minimum of the populated date fields */
         BLANKVALUE(Date_of_Next_Activity_on_Opportunities__c - TODAY(),365242199)
      )
)</formula>
        <inlineHelpText>Formula showing the Date of Next Activity or Date of Next Activity on Contacts or Date of Next Activity on Opportunities that is closest to today</inlineHelpText>
        <label>Date of Next Activity Overall</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Activity__c</fullName>
        <description>Formula showing the Date of Next Event or Date of Next Task that is closest to today</description>
        <formula>IF( ISBLANK(Date_of_Next_Event__c) &amp;&amp; ISBLANK(Date_of_Next_Task__c),
   NULL,

/*ELSE*/
   TODAY() +
      MIN(
         BLANKVALUE(Date_of_Next_Event__c - TODAY(),365242199), /* 1-million years is placeholder if date is blank so that MIN function... */
         BLANKVALUE(Date_of_Next_Task__c - TODAY(),365242199) /* ... can still calculate the minimum of the populated date fields */
      )
)</formula>
        <inlineHelpText>Formula showing the Date of Next Event or Date of Next Task that is closest to today</inlineHelpText>
        <label>Date of Next Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Activity_on_Contacts__c</fullName>
        <description>Rollup showing the Min date (after today) of activity records related to child contacts that are related to this record. This field is populated by the &quot;Acc Date of Next Activity on Contacts&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Min date (after today) of activity records related to child contacts that are related to this record</inlineHelpText>
        <label>Date of Next Activity on Contacts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Activity_on_Opportunities__c</fullName>
        <description>Rollup showing the Min date (after today) of activity records related to child opportunities that are related to this record. This field is populated by the &quot;Acc Date of Next Activity on Opportunities&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Min date (after today) of activity records related to child opportunities that are related to this record</inlineHelpText>
        <label>Date of Next Activity on Opportunities</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Event__c</fullName>
        <description>Rollup showing the Min date (after today) of event records related to this record. This field is populated by the &quot;Acc Date of Next Event&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Min date (after today) of event records related to this record</inlineHelpText>
        <label>Date of Next Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Task__c</fullName>
        <description>Rollup showing the Min date (after today) of task records related to this record. This field is populated by the &quot;Acc Date of Next Task&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Min date (after today) of task records related to this record</inlineHelpText>
        <label>Date of Next Task</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Current User Email Address</description>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current User Email Address</inlineHelpText>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Count__c</fullName>
        <inlineHelpText>Number of Email Activities</inlineHelpText>
        <label>Email Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Count__c</fullName>
        <inlineHelpText>Count of Event Activities</inlineHelpText>
        <label>Event Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Partner Prospect Generated By User</inlineHelpText>
        <label>Generated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PartnerProspectAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Signatory</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InfoUSA_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Partner Propsect ID from InfoUSA</inlineHelpText>
        <label>InfoUSA ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Account was Converted from a Lead during the May 2011 Inside Sales Study</description>
        <inlineHelpText>This Account was Converted from a Lead during the May 2011 Inside Sales Study</inlineHelpText>
        <label>Inside Sales Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Jobs</description>
        <inlineHelpText>Number of Jobs</inlineHelpText>
        <label>JobCount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mail_Count__c</fullName>
        <inlineHelpText>Count of Direct Mail Activities</inlineHelpText>
        <label>Mail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metro_Area__c</fullName>
        <inlineHelpText>Partner Prospect Metro Area</inlineHelpText>
        <label>Metro Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppCountIndex__c</fullName>
        <label>OppCountIndex</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_ID__c</fullName>
        <inlineHelpText>Partner Prospect Other ID</inlineHelpText>
        <label>Other ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Code__c</fullName>
        <description>Referral Code for Partner Accounts</description>
        <inlineHelpText>Referral Code for Partner Accounts</inlineHelpText>
        <label>Partner Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Prospect_Priority__c</fullName>
        <label>Partner Prospect Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Prospect_Status__c</fullName>
        <inlineHelpText>Partner Prospect Status</inlineHelpText>
        <label>Partner Prospect Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open - New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted by Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wants More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Established Contact / Considering Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Off to Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Not a Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost - Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Lead - Bad Contact Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Lead - Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PeteOppCountRollUp__c</fullName>
        <label>PeteOppCountRollUp</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone_Call_Count__c</fullName>
        <inlineHelpText>Number of Phone and Voice Mail Activities</inlineHelpText>
        <label>Phone Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Payment_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Portal Payment Plan</label>
        <referenceTo>Portal_Payment_Plan__c</referenceTo>
        <relationshipLabel>Referring Companies</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Possible_Credit_Issues_Count__c</fullName>
        <description>Count of Credit Report Logs with at least one score below 700</description>
        <inlineHelpText>Count of Credit Report Logs with at least one score below 700</inlineHelpText>
        <label>Possible Credit Issues Count</label>
        <summaryFilterItems>
            <field>Credit_Report_Log__c.Minimum_Score__c</field>
            <operation>lessThan</operation>
            <value>700</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Report_Log__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Source_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Campaign where the Account (Lead) was originally acquired (for cost of acquisition).</inlineHelpText>
        <label>Primary Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts Acquired</relationshipLabel>
        <relationshipName>Accounts_Acquired</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QAS_Billing_County__c</fullName>
        <description>QAS Auto-Populated Billing County</description>
        <inlineHelpText>QAS Auto-Populated Billing County</inlineHelpText>
        <label>QAS Billing County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Billing_Latitude__c</fullName>
        <description>QAS Auto-Populated Billing Latitude</description>
        <inlineHelpText>QAS Auto-Populated Billing Latitude</inlineHelpText>
        <label>QAS Billing Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Billing_Longitude__c</fullName>
        <description>QAS Auto-Populated Billing Longitude</description>
        <inlineHelpText>QAS Auto-Populated Billing Longitude</inlineHelpText>
        <label>QAS Billing Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Shipping_County__c</fullName>
        <description>QAS Auto-Populated Shipping County</description>
        <inlineHelpText>QAS Auto-Populated Shipping County</inlineHelpText>
        <label>QAS Shipping County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Shipping_Latitude__c</fullName>
        <description>QAS Auto-Populated Shipping Latitude</description>
        <inlineHelpText>QAS Auto-Populated Shipping Latitude</inlineHelpText>
        <label>QAS Shipping Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Shipping_Longitude__c</fullName>
        <description>QAS Auto-Populated Shipping Longitude</description>
        <inlineHelpText>QAS Auto-Populated Shipping Longitude</inlineHelpText>
        <label>QAS Shipping Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Project_ID__c</fullName>
        <description>Project ID from Quickbooks</description>
        <label>QB Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User who qualified the Partner Prospect</inlineHelpText>
        <label>Qualified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QualifiedPartnerProspects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Partner Prospect Referring Account</inlineHelpText>
        <label>Referring Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referred Accounts</relationshipLabel>
        <relationshipName>ReferredAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related User for Employee Accounts</description>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Development - Relationship Manager</description>
        <inlineHelpText>Business Development - Relationship Manager</inlineHelpText>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BD_Relationship_Manager_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Development - Relationship Owner</description>
        <inlineHelpText>Business Development - Relationship Owner</inlineHelpText>
        <label>Relationship Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Development_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_SIC_Description__c</fullName>
        <inlineHelpText>Partner Prospect Secondary SIC Description</inlineHelpText>
        <label>Secondary SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solarize_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solarize Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Since_Last_Call_Hours__c</fullName>
        <description>Number of Hours Since Last Call</description>
        <formula>(NOW() - qbdialer__LastCallTime__c)*24</formula>
        <inlineHelpText>Number of Hours Since Last Call</inlineHelpText>
        <label>Time Since Last Call (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Detail__c</fullName>
        <description>More detailed information about what type of account this is</description>
        <inlineHelpText>More detailed information about what type of account this is</inlineHelpText>
        <label>Type Detail</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Consultant Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condo Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Union</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ValidationStatus_BillingAddress__c</fullName>
        <label>QAS ValidationStatus Billing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationStatus_ShippingAddress__c</fullName>
        <label>QAS Validation Status Shipping Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationTimestamp_BillingAddress__c</fullName>
        <label>QAS Billing Address Validation Timestam</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ValidationTimestamp_ShippingAddress__c</fullName>
        <label>QAS ShippingAddress Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountTradingCurrency__c</fullName>
        <label>Account Trading Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsPayableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A vendor must refer to a GLA for it to be used in making a posting. This association is inherited from the Accounting Dimension.</description>
        <label>Accounts Payable Control</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Accounts Payable Control Account)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsReceivableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An appropriate accounts receivable (or trade debtors) general ledger account.</description>
        <label>Accounts Receivable Control</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Account in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountName__c</fullName>
        <description>The name of the bank account</description>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountNumber__c</fullName>
        <description>The account number</description>
        <label>Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountReference__c</fullName>
        <description>The account reference, sometimes required for electronic transfers</description>
        <label>Bank Account Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCity__c</fullName>
        <description>The city</description>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCountry__c</fullName>
        <description>The country</description>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankFax__c</fullName>
        <description>The fax number</description>
        <label>Bank Fax</label>
        <type>Phone</type>
    </fields>
</CustomObject>